fix: remove one route from swagger and todo controller bracket issue
